unpackaged/main/default/objects/Campaign/fields/Booked_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Booked_Tickets__c</fullName>
    <label>Booked Tickets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>