unpackaged/main/default/objects/Campaign/fields/Content_of_the_Event__c.field-meta.xml
<CustomField>
    <fullName>Content_of_the_Event__c</fullName>
    <label>Content of the Event</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>