unpackaged/main/default/objects/Campaign/fields/Filled_Volunteer_jobs__c.field-meta.xml
<CustomField>
    <fullName>Filled_Volunteer_jobs__c</fullName>
    <label>Filled Volunteer jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>