unpackaged/main/default/objects/Campaign/fields/Open_Volunteer_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Open_Volunteer_Jobs__c</fullName>
    <formula>Total_Volunteer_Jobs__c - Filled_Volunteer_jobs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Volunteer Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>