unpackaged/main/default/objects/Campaign/fields/Remaining_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Tickets__c</fullName>
    <formula>Total_Tickets__c -  Booked_Tickets__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Tickets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>