unpackaged/main/default/objects/Campaign/fields/Total_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Total_Tickets__c</fullName>
    <label>Total Tickets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>