unpackaged/main/default/objects/Campaign/fields/Total_Volunteer_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Total_Volunteer_Jobs__c</fullName>
    <label>Total Volunteer Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>