unpackaged/main/default/objects/Campaign/fields/Type_of_the_Event__c.field-meta.xml
<CustomField>
    <fullName>Type_of_the_Event__c</fullName>
    <label>Type of the Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>